[package]
name        = "camper"
version     = "0.1.0"
authors     = ["Jesse Braham <jesse@beta7.io>"]
edition     = "2021"
description = "A command-line application for interacting with Bandcamp collections"
license     = "MIT OR Apache-2.0"

[dependencies]
anyhow       = "1.0"
async-trait  = "0.1"
chrono       = "0.4"
comfy-table  = "5.0"
dialoguer    = "0.9"
directories  = "4.0"
indicatif    = "0.16"
strum        = "0.23"
strum_macros = "0.23"
toml         = "0.5"

[dependencies.clap]
version  = "3.0.0-rc.11"
features = ["derive"]

[dependencies.reqwest]
version  = "0.11"
features = ["json"]

[dependencies.serde]
version  = "1.0"
features = ["derive"]

[dependencies.tokio]
version  = "1.15"
features = ["full"]
